syntax = "proto3";

option go_package = "./pb";

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  int32 page_count = 4;
  optional string language = 5;
}

message GetBookListRequest {}
message GetBookListResponse { repeated Book books = 1; }

message GetBookByIdRequest { string id = 1;}

service Inventory {
  rpc GetBookList(GetBookListRequest) returns (GetBookListResponse) {}
  rpc GetBookById(GetBookByIdRequest) returns (Book) {}
}